--- a/noteAppWeb.html
+++ b/noteAppWeb.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scal=1.0">
-    <meta charset="UTF-8">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
     <title>Notes App</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header>
-        <h2><a href ="#" class="logo"><img src="images/logo.png" alt="notepad"></a></h2>
-        <ul>
-            <li class="homebtn"><a href="#" class="active">Home</a></li>
-            <li class="btn"><a href="#">Add Note</a></li>
-            <li class="ab"><a href="#">About</a></li>
-        </ul>
+      <h2>
+        <a href="#" class="logo"><img src="images/logo.png" alt="notepad" /></a>
+      </h2>
+      <ul>
+        <li class="homebtn"><a href="#" class="active">Home</a></li>
+        <li class="btn"><a href="#">Add Note</a></li>
+        <li class="ab"><a href="#">About</a></li>
+      </ul>
     </header>
     <section class="home">
-        <div class="notes-container"></div>
+      <div class="notes-container"></div>
     </section>
     <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>Company</h4>
-                    <ul>
-                        <li><a href="#">about us</a></li>
-                        <li><a href="#">our privacy</a></li>
-                        <li><a href="#"> our services</a></li>
-                    </ul>
-
-                </div>
-
-                <div class="footer-col">
-                    <h4>get help</h4>
-                    <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">premuim</a></li>
-                        <li><a href="#">other products</a></li>
-                    </ul>
-
-                </div>
-                <div class="footer-col">
-                    <h4>follow us</h4>
-                    <div class="social-links">
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-
-                    </div>
-                </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>Company</h4>
+            <ul>
+              <li><a href="#">about us</a></li>
+              <li><a href="#">our privacy</a></li>
+              <li><a href="#">our services</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>get help</h4>
+            <ul>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">premuim</a></li>
+              <li><a href="#">other products</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>follow us</h4>
+            <div class="social-links">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-github"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+          </div>
         </div>
+      </div>
     </footer>
-   
     <script src="script.js"></script>
-    </body>
-
-
-</html> 
+  </body>
+</html>
