--- a/index.html
+++ b/index.html
@@ -17,43 +17,45 @@
   <body>
     <header>
       <h2>
-        <a href="#" class="logo"><img src="images/logo.png" alt="notepad" /></a>
+        <a href="#home" class="logo"
+          ><img src="images/logo.png" alt="notepad"
+        /></a>
       </h2>
       <ul>
-        <li class="homebtn"><a href="#" class="active">Home</a></li>
-        <li class="btn"><a href="#">Add Note</a></li>
-        <li class="ab"><a href="#">About</a></li>
+        <li class="homebtn"><a href="#home" class="active">Home</a></li>
+        <li class="btn"><a href="#home">Add Note</a></li>
+        <li class="ab"><a href="#footer">About</a></li>
       </ul>
     </header>
-    <section class="home">
+    <section class="home" id="home">
       <div class="notes-container"></div>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="container">
         <div class="row">
           <div class="footer-col">
             <h4>Company</h4>
             <ul>
-              <li><a href="#">about us</a></li>
-              <li><a href="#">our privacy</a></li>
-              <li><a href="#">our services</a></li>
+              <li><a>about us</a></li>
+              <li><a>our privacy</a></li>
+              <li><a>our services</a></li>
             </ul>
           </div>
           <div class="footer-col">
             <h4>get help</h4>
             <ul>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">premuim</a></li>
-              <li><a href="#">other products</a></li>
+              <li><a>FAQ</a></li>
+              <li><a>premuim</a></li>
+              <li><a>other products</a></li>
             </ul>
           </div>
           <div class="footer-col">
             <h4>follow us</h4>
             <div class="social-links">
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
-              <a href="#"><i class="fa-brands fa-github"></i></a>
-              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+              <a><i class="fa-brands fa-facebook"></i></a>
+              <a><i class="fa-brands fa-twitter"></i></a>
+              <a><i class="fa-brands fa-github"></i></a>
+              <a><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
         </div>
